new change some code in the interface

--- a/BookStore/Views/Home/Shop.cshtml
+++ b/BookStore/Views/Home/Shop.cshtml
@@ -70,7 +70,7 @@
                                     <div class="col-lg-6 col-md-6 col-xl-3">
                                         <div class="product-wrapper mb-30">
                                             <div class="product-img">
-                                                <a href="#">
+                                                <a asp-controller="Home" asp-action="ProductDetail">
                                                     <img src="~/img/product/fashion-colorful/1.jpg" alt="">
                                                 </a>
                                                 <span>hot</span>
@@ -87,7 +87,7 @@
                                                 </div>
                                             </div>
                                             <div class="product-content">
-                                                <h4><a href="#">Homme Tapered Smart </a></h4>
+                                                <h4><a asp-controller="Home" asp-action="ProductDetail">Homme Tapered Smart </a></h4>
                                                 <span>$115.00</span>
                                             </div>
                                         </div>
