--- a/BookStore/Views/Admin/Book.cshtml
+++ b/BookStore/Views/Admin/Book.cshtml
@@ -1,8 +1,11 @@
-﻿
+﻿@model IEnumerable<BusinessObjects.Book>
 @{
     ViewData["Title"] = "Book";
 }
+@foreach (var item in Model)
+{
 
+}
 <main id="main" class="main">
     <section class="section">
         <div class="row">
