create API for genre, discount, publisher, language, author and fill data

--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -268,16 +268,16 @@
                 </a>
                 <ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
                     <li>
-                        <a asp-controller="Admin" asp-action="Category"><i class="bi bi-circle"></i><span>Category</span></a>
+                        <a asp-controller="Genres" asp-action="Index"><i class="bi bi-circle"></i><span>Genre</span></a>
                     </li>
                     <li>
-                        <a asp-controller="Admin" asp-action="Book"><i class="bi bi-circle"></i><span>Book</span></a>
+                        <a asp-controller="Books" asp-action="Index"><i class="bi bi-circle"></i><span>Book</span></a>
                     </li>
                     <li>
                         <a asp-controller="Admin" asp-action="User"><i class="bi bi-circle"></i><span>User</span></a>
                     </li>
                     <li>
-                        <a asp-controller="Admin" asp-action="Language"><i class="bi bi-circle"></i><span>Language</span></a>
+                        <a asp-controller="Languages" asp-action="Index"><i class="bi bi-circle"></i><span>Language</span></a>
                     </li>
                     <li>
                         <a asp-controller="Admin" asp-action="Feedback"><i class="bi bi-circle"></i><span>Feedbacks</span></a>
@@ -289,13 +289,13 @@
                         <a asp-controller="Admin" asp-action="Review"><i class="bi bi-circle"></i><span>Reviews</span></a>
                     </li>
                     <li>
-                        <a asp-controller="Admin" asp-action="Author"><i class="bi bi-circle"></i><span>Authors</span></a>
+                        <a asp-controller="Authors" asp-action="Index"><i class="bi bi-circle"></i><span>Authors</span></a>
                     </li>
                     <li>
-                        <a asp-controller="Admin" asp-action="Publisher"><i class="bi bi-circle"></i><span>Publishers</span></a>
+                        <a asp-controller="Publishers" asp-action="Index"><i class="bi bi-circle"></i><span>Publishers</span></a>
                     </li>
                     <li>
-                        <a asp-controller="Admin" asp-action="Discount"><i class="bi bi-circle"></i><span>Discounts</span></a>
+                        <a asp-controller="Discounts" asp-action="Index"><i class="bi bi-circle"></i><span>Discounts</span></a>
                     </li>
                 </ul>
             </li><!-- End Tables Nav -->
