--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -280,13 +280,13 @@
                         <a asp-controller="Languages" asp-action="Index"><i class="bi bi-circle"></i><span>Language</span></a>
                     </li>
                     <li>
-                        <a asp-controller="Admin" asp-action="Feedback"><i class="bi bi-circle"></i><span>Feedbacks</span></a>
+                        <a asp-controller="FeedBacks" asp-action="Index"><i class="bi bi-circle"></i><span>Feedbacks</span></a>
                     </li>
                     <li>
                         <a asp-controller="Admin" asp-action="Order"><i class="bi bi-circle"></i><span>Orders</span></a>
                     </li>
                     <li>
-                        <a asp-controller="Admin" asp-action="Review"><i class="bi bi-circle"></i><span>Reviews</span></a>
+                        <a asp-controller="Reviews" asp-action="Index"><i class="bi bi-circle"></i><span>Reviews</span></a>
                     </li>
                     <li>
                         <a asp-controller="Authors" asp-action="Index"><i class="bi bi-circle"></i><span>Authors</span></a>
