--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <!-- header end -->
 <div class="slider-area">
     <div class="slider-active owl-carousel">
-        <div class="single-slider single-slider-book1 bg-img" style="background-image: url('@Url.Content("~/img/slider/1.png")')">
+        <div class="single-slider single-slider-book1 bg-img" style="background-image: url('@Url.Content("~/img/product/book/1.png")')">
             <div class="container">
                 <div class="slider-animation slider-content-book fadeinup-animated">
                     <h1 class="animated"><span>Knowledge</span> is</h1>
@@ -19,7 +19,7 @@
                 </div>
             </div>
         </div>
-        <div class="single-slider single-slider-book1 bg-img" style="background-image: url('@Url.Content("~/img/slider/1.png")')">
+        <div class="single-slider single-slider-book1 bg-img" style="background-image: url('@Url.Content("~/img/product/book/poster1.png")')">
             <div class="container">
                 <div class="slider-animation slider-content-book fadeinup-animated">
                     <h1 class="animated"><span>Knowledge</span> is</h1>
@@ -1633,5 +1633,9 @@
 </div>
 <!-- testimonials area end -->
 @section Scripts {
-    <script src="~/js/main.js"></script>   
+    <script src="~/js/main.js"></script>
+    <script>
+        const api = "@ViewBag.api"
+        localStorage.setItem("apiUrl", api);
+    </script>
 }
