filter in bar area

--- a/BookStore/Views/Shared/_Layout2.cshtml
+++ b/BookStore/Views/Shared/_Layout2.cshtml
@@ -117,7 +117,7 @@
                     <ul class="cart-dropdown">
                         <li class="single-product-cart">
                             <div class="cart-img">
-                                <a href="#"><img src="~/img/product/book/6.jpg" alt=""></a>
+                                <a href="#"><img src="~/img/cart/1.jpg" alt=""></a>
                             </div>
                             <div class="cart-title">
                                 <h5><a href="#"> Bits Headphone</a></h5>
