--- a/BookStore/Views/Home/Cart.cshtml
+++ b/BookStore/Views/Home/Cart.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Cart";
 }
 
-<div class="breadcrumb-area pt-205 pb-210" style="background-image: url('@Url.Content("~/img/bg/breadcrumb.jpg")')">
+<div class="breadcrumb-area pt-205 pb-210" style="background-image: url('@Url.Content("~/img/product/book/poster1.jpg")')">
     <div class="container">
         <div class="breadcrumb-content text-center">
             <h2>cart page</h2>
