fix error in add language, display list language in add new book form, fix interface of navbar in client page

--- a/BookStore/Views/Shared/_Layout2.cshtml
+++ b/BookStore/Views/Shared/_Layout2.cshtml
@@ -30,9 +30,9 @@
 <header class="res-header-sm">
     <div class="header-top-wrapper theme-bg-2">
         <div class="container">
-            <div class="header-top">
+            <div class="header-top d-flex align-items-center">
                 <div class="header-info">
-                    <span>Contact us - (84+) 123456789  or  <a href="#">trannggcc210042@fpt.edu.vn | phuongddmgcc200407@fpt.edu.vn | datdmgcc210147@fpt.edu.vn</a></span>
+                    <span>Contact us - (84+) 123456789  or  <a href="#">FPTBookStore@fpt.com.vn</a></span>
                 </div>
                 <partial name="_LoginPartial.cshtml" />
             </div>
