--- a/BookStore/Views/Books/Index.cshtml
+++ b/BookStore/Views/Books/Index.cshtml
@@ -73,13 +73,9 @@
                                                     <label for="publisher">Publisher</label>
                                                     <!-- <input type="text" class="form-control" id="publisher" placeholder="Enter publisher"> -->
                                                     <select class="form-control" id="publisher">
-                                                        @* <option value="">Publisher 1</option>
+                                                        <option value="">Publisher 1</option>
                                                         <option value="">Publisher 2</option>
-                                                        <option value="">Publisher 3</option> *@
-                                                        @foreach (var language in Model)
-                                                        {
-                                                            <option value="@language.LanguageId">@language.Language</option>
-                                                        }
+                                                        <option value="">Publisher 3</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -95,12 +91,9 @@
                                             </div>
                                             <dic class="form-row">
                                                 <div class="form-group col-md-6">
-                                                    <label for="languages">Languages</label>
-                                                    <!-- <input type="text" class="form-control" id="languages" placeholder="Enter languages"> -->
-                                                    <select class="form-control" id="languages">
-                                                        <option value="">Language 1</option>
-                                                        <option value="">Language 2</option>
-                                                        <option value="">Language 3</option>
+                                                    <label class="control-label">Language</label>
+                                                    <select class="form-control" id="languageDropdown">
+                                                        <option value="">Select a language</option>
                                                     </select>
                                                 </div>
                                                 <div class="form-group col-md-6">
@@ -180,6 +173,23 @@
 
 </main><!-- End #main -->
 @section Scripts{
+    <script>
+        $(document).ready(function () {
+            // Gọi API để lấy danh sách ngôn ngữ và cập nhật dropdownlist
+            $.ajax({
+                url: '/api/Languages',
+                type: 'GET',
+                dataType: 'json',
+                success: function (data) {
+                    var dropdown = $('#languageDropdown');
+                    dropdown.empty();
+                    dropdown.append($('<option>').val('').text('Select a language'));
+                    $.each(data, function (key, entry) {
+                        dropdown.append($('<option>').val(entry.id).text(entry.name));
+                    });
+                }
+            });
+        });</script>
     <script src="~/js/js-admin/main.js"></script>
 }
 
