--- a/BookStore/Views/Languages/Index.cshtml
+++ b/BookStore/Views/Languages/Index.cshtml
@@ -36,13 +36,12 @@
                                         <div class="modal-body">
                                             <form asp-action="CreateLanguage" asp-controller="Language" id="myForm" method="POST">
                                                 @Html.AntiForgeryToken()
-                                                <input type="hidden" id="Id" name="Id" />
                                                 <div class="form-group">
                                                     <label for="languageName">Language Name</label>
                                                     <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Language Name">
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button type="submit" class="btn btn-primary" id="submitButton" data-mode="add">Add</button>
+                                                    <button type="submit" class="btn btn-primary">Add</button>
                                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                                                 </div>
                                             </form>
@@ -51,35 +50,6 @@
                                     </div>
                                 </div>
                             </div>
-
-                            @* Model For Edit *@
-                            <!-- Modal -->
-                            <div class="modal fade" id="editLanguageModal" tabindex="-1" role="dialog" aria-labelledby="editLanguageModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="editLanguageModalLabel">Edit Language</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <form id="editLanguageForm">
-                                                <div class="form-group">
-                                                    <label for="editLanguageName">Language Name</label>
-                                                    <input type="text" class="form-control" id="editLanguageName" name="editLanguageName">
-                                                </div>
-                                                <input type="hidden" id="editLanguageId" name="editLanguageId">
-                                            </form>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-primary" id="saveEditLanguage">Save Changes</button>
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>               
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
 
                         </div>
                         <!-- Small tables -->
