--- a/BookStore/Views/Shared/_LoginPartial.cshtml
+++ b/BookStore/Views/Shared/_LoginPartial.cshtml
@@ -5,24 +5,25 @@
 @inject UserManager<AppUser> UserManager
 
 <ul class="navbar-nav">
-	@if (SignInManager.IsSignedIn(User))
-	{
-		<li class="nav-item">
-			<a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-		</li>
-		<li class="nav-item">
-			<form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-				<button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-			</form>
-		</li>
-	}
-	else
-	{
-		<div class="book-login-register">
-			<ul>
-				<li><a id="login" asp-area="Identity" asp-page="/Account/Login"><i class="ti-user"></i>login</a></li>
-				<li><a id="register" asp-area="Identity" asp-page="/Account/Register"><i class="ti-settings"></i>register</a></li>
-			</ul>
-		</div>
-	}
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <li class="nav-item">
+            <div class="d-flex justify-content-center align-items-center">
+                <a id="manage" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <form id="logoutForm" class="nav-link form-inline ml-2" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                    <button id="logout" type="submit" class="nav-link btn btn-link text-white">Logout</button>
+                </form>
+            </div>
+        </li>
+    }
+    else
+    {
+        <div class="book-login-register">
+            <ul class="list-unstyled mb-0">
+                <li><a id="login" asp-area="Identity" asp-page="/Account/Login"><i class="ti-user"></i> Login</a></li>
+                <li><a id="register" asp-area="Identity" asp-page="/Account/Register"><i class="ti-settings"></i> Register</a></li>
+            </ul>
+        </div>
+    }
 </ul>
+
