--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
                 <h2>Best Products</h2>
             </div>
             <div class="best-product-style">
-                <div class="product-tab-list2 text-center mb-95 nav product-menu-mrg" role="tablist">
+                <div id="topSix_genres" class="product-tab-list2 text-center mb-95 nav product-menu-mrg" role="tablist">
                     <a class="active" href="#home6" data-bs-toggle="tab" role="tab">
                         <h4>Fiction </h4>
                     </a>
