--- a/BookStore/Areas/Identity/Pages/Account/Login.cshtml
+++ b/BookStore/Areas/Identity/Pages/Account/Login.cshtml
@@ -27,6 +27,7 @@
                     <div class="login-form-container">
                         <div class="login-form">
                             <form id="account" method="post">
+                                <div asp-validation-summary="ModelOnly" class="text-danger text-center"></div>
                                 <input type="text" asp-for="Input.Email"  autocomplete="username" placeholder="Username">
                                 <span asp-validation-for="Input.Email" class="text-danger"></span>
 
