--- a/BookStore/Areas/Owner/Views/Shared/_Layout.cshtml
+++ b/BookStore/Areas/Owner/Views/Shared/_Layout.cshtml
@@ -280,16 +280,13 @@
                         <a asp-controller="Books" asp-action="Index"><i class="bi bi-circle"></i><span>Books</span></a>
                     </li>
                     <li>
-                        <a asp-controller="Users" asp-action="Index"><i class="bi bi-circle"></i><span>Users</span></a>
-                    </li>
-                    <li>
                         <a asp-controller="Languages" asp-action="Index"><i class="bi bi-circle"></i><span>Languages</span></a>
                     </li>
                     <li>
                         <a asp-controller="FeedBacks" asp-action="Index"><i class="bi bi-circle"></i><span>Feedbacks</span></a>
                     </li>
                     <li>
-                        <a asp-controller="Admin" asp-action="Order"><i class="bi bi-circle"></i><span>Orders</span></a>
+                        <a asp-controller="Orders" asp-action="Index"><i class="bi bi-circle"></i><span>Orders</span></a>
                     </li>
                     <li>
                         <a asp-controller="Reviews" asp-action="Index"><i class="bi bi-circle"></i><span>Reviews</span></a>
