--- a/BookStore/Areas/Owner/Views/Genres/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Genres/Index.cshtml
@@ -124,6 +124,63 @@
 
 </main><!-- End #main -->
 @section Scripts{
+    <script>
+        // Add
+        $(document).ready(function () {
+            $('#myForm').submit(function (e) {
+                e.preventDefault();
+
+                // Get the anti-forgery token value from the hidden input field
+                var antiForgeryToken = $('input[name="__RequestVerificationToken"]').val();
+
+                // Get the value from the "Name" and "Description" input fields
+                var Name = $('#categoryName').val();
+                var Description = $('#categoryDescription').val();
+                var AddDate = new Date().toISOString();
+                var ApprovalStatus = 0;
+                // Create a JSON data object to send to the API
+                var data = {
+                    Name: Name,
+                    Description: Description,
+                    AddDate: AddDate,
+                    ApprovalStatus: ApprovalStatus
+                };
+
+                // Include the anti-forgery token in the request headers
+                var headers = {};
+                headers['__RequestVerificationToken'] = antiForgeryToken;
+                // Use AJAX to send data to the API
+                console.log(data)
+                $.ajax({
+                    type: 'POST',
+                    url: 'https://localhost:7269/api/Genres',
+                    data: JSON.stringify(data),
+                    contentType: 'application/json',
+                    headers: headers,
+                    success: function (response) {
+                        // Handle the response from the API
+                        $('#categoryModal').modal('hide');
+                        Swal.fire({
+                            icon: 'success',
+                            title: 'Your work has been saved',
+                            showConfirmButton: false,
+                            timer: 1500
+                        });
+
+                        // Clear input
+                        $('#categoryName').val('');
+                        $('#categoryDescription').val('');
+
+                        refreshGenreList();
+                    },
+                    error: function (error) {
+                        // Handle errors (if any)
+                        console.error('Error:', error);
+                        alert('An error occurred while sending data.');
+                    }
+                });
+            });
+        });</script>
     <script src="~/js/js-admin/genre.js"></script>
 <script src="~/js/js-admin/main.js"></script>
 }
